@@ -5,10 +5,10 @@
 %Error: t/t_fallback_bad.v:27:15: Can't find definition of task/function: 'tsk'
    27 |          this.tsk;
       |               ^~~
-%Error: t/t_fallback_bad.v:28:16: Can't find definition of variable: 'f'
+%Error: t/t_fallback_bad.v:28:16: Can't find definition of variable/method: 'f'
    28 |          super.f = 8;
       |                ^
-%Error: t/t_fallback_bad.v:29:15: Can't find definition of variable: 'f'
+%Error: t/t_fallback_bad.v:29:15: Can't find definition of variable/method: 'f'
    29 |          this.f = 8;
       |               ^
 %Error: t/t_fallback_bad.v:30:20: Can't find definition of 'tsk' in dotted task/function: 'sub1.sub2.tsk'
@@ -21,7 +21,7 @@
 %Error: t/t_fallback_bad.v:32:15: Can't find definition of task/function: 'tsk'
    32 |          pkg::tsk();
       |               ^~~
-%Error: t/t_fallback_bad.v:33:20: Can't find definition of 'f' in dotted variable: 'sub1.sub2.f'
+%Error: t/t_fallback_bad.v:33:20: Can't find definition of 'f' in dotted variable/method: 'sub1.sub2.f'
    33 |          sub1.sub2.f = 8;
       |                    ^
 %Error: t/t_fallback_bad.v:34:20: Can't find definition of 'f' in dotted scope/variable: 'sub1.sub2.f'
